Readme
Co-authored-by: Danilo Campos Deichmann <danilo.campos@dcomp.ufs.br>